--- a/CompanyEmployees/Properties/launchSettings.json
+++ b/CompanyEmployees/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "CompanyEmployees": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:7105;http://localhost:5105",
+      "applicationUrl": "https://localhost:5001;http://localhost:5105",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
