add access token and refresh token authtication functions

--- a/CompanyEmployees/appsettings.json
+++ b/CompanyEmployees/appsettings.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": {
     "sqlConnection": "Server=172.31.50.31,5434; Database=CompanyEmplyee; User Id=sa; Password=Password1999; TrustServerCertificate=True;"
   },
+  "JwtSettings": {
+    "validIssuer": "CodeMazeAPI",
+    "validAudience": "https://localhost:5001"
+  },
   "AllowedHosts": "*"
 }
